WTEASSRV-7 Add EAS Rest APIs
