# src/gen/swagger/com/sonicle/webtop/calendar/swagger/v1/model/SyncEventStat.java
@@ -1,0 +1,100 @@
+package com.sonicle.webtop.calendar.swagger.v1.model;
+
+import io.swagger.annotations.ApiModel;
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+
+
+/**
+ * Bean for carry event&#39;s stat fields
+ **/
+import io.swagger.annotations.*;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+@ApiModel(description = "Bean for carry event's stat fields")
+
+public class SyncEventStat   {
+  
+  private @Valid Integer id = null;
+  private @Valid String etag = null;
+
+  /**
+   * Event ID (internal)
+   **/
+  public SyncEventStat id(Integer id) {
+    this.id = id;
+    return this;
+  }
+
+  
+  @ApiModelProperty(required = true, value = "Event ID (internal)")
+  @JsonProperty("id")
+  @NotNull
+  public Integer getId() {
+    return id;
+  }
+  public void setId(Integer id) {
+    this.id = id;
+  }
+
+  /**
+   * Revision tag
+   **/
+  public SyncEventStat etag(String etag) {
+    this.etag = etag;
+    return this;
+  }
+
+  
+  @ApiModelProperty(required = true, value = "Revision tag")
+  @JsonProperty("etag")
+  @NotNull
+  public String getEtag() {
+    return etag;
+  }
+  public void setEtag(String etag) {
+    this.etag = etag;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    SyncEventStat syncEventStat = (SyncEventStat) o;
+    return Objects.equals(id, syncEventStat.id) &&
+        Objects.equals(etag, syncEventStat.etag);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, etag);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class SyncEventStat {\n");
+    
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    etag: ").append(toIndentedString(etag)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
