# src/main/resources/com/sonicle/webtop/calendar/openapi-v1.json
@@ -372,6 +372,223 @@
           "description": "CalObject reference URI"
         }
       ]
+    },
+    "/eas/folders": {
+      "get": {
+        "tags": [
+          "eas-folders"
+        ],
+        "summary": "List all folders",
+        "operationId": "getFolders",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SyncFolder"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/eas/folders/{folderId}/messages-stats": {
+      "get": {
+        "tags": [
+          "eas-messages"
+        ],
+        "summary": "List all messages for a specific folder",
+        "operationId": "getMessagesStats",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "cutoffDate",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "description": "Cut-off date (ISO date/time YYYYMMDD'T'HHMMSS'Z')",
+            "x-example": "20150912T000000Z"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SyncEventStat"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameter"
+          }
+        }
+      },
+      "parameters": [
+        {
+          "name": "folderId",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "description": "Folder ID",
+          "x-example": 1234
+        }
+      ]
+    },
+    "/eas/folders/{folderId}/messages": {
+      "post": {
+        "tags": [
+          "eas-messages"
+        ],
+        "summary": "Adds a message",
+        "operationId": "addMessage",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/SyncEventUpdate"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/SyncEventStat"
+            }
+          }
+        }
+      },
+      "parameters": [
+        {
+          "name": "folderId",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "description": "Folder ID",
+          "x-example": 1234
+        }
+      ]
+    },
+    "/eas/folders/{folderId}/messages/{id}": {
+      "get": {
+        "tags": [
+          "eas-messages"
+        ],
+        "summary": "Get a single message",
+        "operationId": "getMessage",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/SyncEvent"
+            }
+          },
+          "400": {
+            "description": "Invalid parameter"
+          },
+          "404": {
+            "description": "Message not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "eas-messages"
+        ],
+        "summary": "Updates a message",
+        "operationId": "updateMessage",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/SyncEventUpdate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SyncEventStat"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameter"
+          },
+          "404": {
+            "description": "Message not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "eas-messages"
+        ],
+        "summary": "Deletes a message",
+        "operationId": "deleteMessage",
+        "parameters": [],
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Invalid parameter"
+          },
+          "404": {
+            "description": "Message not found"
+          }
+        }
+      },
+      "parameters": [
+        {
+          "name": "folderId",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "description": "Folder ID",
+          "x-example": 1234
+        },
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "integer",
+          "description": "Message ID",
+          "x-example": 1234
+        }
+      ]
     }
   },
   "securityDefinitions": {
@@ -607,6 +824,287 @@
         }
       },
       "description": "Bean for carry calendar object collection changes"
+    },
+    "SyncFolder": {
+      "type": "object",
+      "required": [
+        "deflt",
+        "displayName",
+        "elAcl",
+        "etag",
+        "foAcl",
+        "id",
+        "ownerId"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "description": "Calendar ID (internal)"
+        },
+        "displayName": {
+          "type": "string",
+          "description": "Display name"
+        },
+        "etag": {
+          "type": "string",
+          "description": "Revision tag"
+        },
+        "deflt": {
+          "type": "boolean",
+          "description": "Specifies if marked as predefined folder"
+        },
+        "foAcl": {
+          "type": "string",
+          "description": "ACL info for folder itself"
+        },
+        "elAcl": {
+          "type": "string",
+          "description": "ACL info for folder elements"
+        },
+        "ownerId": {
+          "type": "string",
+          "description": "The owner profile ID"
+        }
+      },
+      "description": "Bean for carry calendar’s fields"
+    },
+    "SyncEventStat": {
+      "type": "object",
+      "required": [
+        "etag",
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "description": "Event ID (internal)"
+        },
+        "etag": {
+          "type": "string",
+          "description": "Revision tag"
+        }
+      },
+      "description": "Bean for carry event's stat fields"
+    },
+    "SyncEvent": {
+      "type": "object",
+      "required": [
+        "allDay",
+        "attendees",
+        "busy",
+        "end",
+        "etag",
+        "id",
+        "organizer",
+        "prvt",
+        "start",
+        "tz"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "description": "Event ID (internal)"
+        },
+        "etag": {
+          "type": "string",
+          "description": "Revision tag"
+        },
+        "start": {
+          "type": "string",
+          "description": "Start date/time (ISO format)"
+        },
+        "end": {
+          "type": "string",
+          "description": "End date/time (ISO format)"
+        },
+        "tz": {
+          "type": "string",
+          "description": "Timezone ID"
+        },
+        "allDay": {
+          "type": "boolean",
+          "description": "All day flag"
+        },
+        "organizer": {
+          "type": "string",
+          "description": "Organizer address (as RFC822)"
+        },
+        "title": {
+          "type": "string",
+          "description": "Title"
+        },
+        "description": {
+          "type": "string",
+          "description": "Description"
+        },
+        "location": {
+          "type": "string",
+          "description": "Location"
+        },
+        "prvt": {
+          "type": "boolean",
+          "description": "Private flag"
+        },
+        "busy": {
+          "type": "boolean",
+          "description": "Busy flag"
+        },
+        "reminder": {
+          "type": "integer",
+          "description": "Reminder"
+        },
+        "recRule": {
+          "type": "string",
+          "description": "Recurrence RULE string"
+        },
+        "recStart": {
+          "type": "string",
+          "description": "Recurrence start date (ISO date YYYYMMDD)"
+        },
+        "exDates": {
+          "type": "array",
+          "description": "Excluded dates (ISO date YYYYMMDD)",
+          "items": {
+            "type": "string"
+          }
+        },
+        "attendees": {
+          "type": "array",
+          "description": "Appointment attendees",
+          "items": {
+            "$ref": "#/definitions/SyncEventDataAttendee"
+          }
+        }
+      },
+      "description": "Bean for carry event's fields"
+    },
+    "SyncEventUpdate": {
+      "type": "object",
+      "required": [
+        "data"
+      ],
+      "properties": {
+        "data": {
+          "$ref": "#/definitions/SyncEventData"
+        },
+        "exceptions": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SyncEventData"
+          }
+        }
+      },
+      "description": "Bean for carry event's updateable fields"
+    },
+    "SyncEventData": {
+      "type": "object",
+      "required": [
+        "allDay",
+        "attendees",
+        "busy",
+        "end",
+        "organizer",
+        "prvt",
+        "start",
+        "tz"
+      ],
+      "properties": {
+        "start": {
+          "type": "string",
+          "description": "Start date/time (ISO date/time YYYYMMDD'T'HHMMSS'Z')"
+        },
+        "end": {
+          "type": "string",
+          "description": "End date/time (ISO date/time YYYYMMDD'T'HHMMSS'Z')"
+        },
+        "tz": {
+          "type": "string",
+          "description": "Timezone ID"
+        },
+        "allDay": {
+          "type": "boolean",
+          "description": "All day flag"
+        },
+        "organizer": {
+          "type": "string",
+          "description": "Organizer address (as RFC822)"
+        },
+        "title": {
+          "type": "string",
+          "description": "Title"
+        },
+        "description": {
+          "type": "string",
+          "description": "Description"
+        },
+        "location": {
+          "type": "string",
+          "description": "Location"
+        },
+        "prvt": {
+          "type": "boolean",
+          "description": "Private flag"
+        },
+        "busy": {
+          "type": "boolean",
+          "description": "Busy flag"
+        },
+        "reminder": {
+          "type": "integer",
+          "description": "Reminder"
+        },
+        "recRule": {
+          "type": "string",
+          "description": "Recurrence RULE string"
+        },
+        "recStart": {
+          "type": "string",
+          "description": "Recurrence start date (ISO date YYYYMMDD)"
+        },
+        "exDates": {
+          "type": "array",
+          "description": "Excluded dates (ISO date YYYYMMDD)",
+          "items": {
+            "type": "string"
+          }
+        },
+        "attendees": {
+          "type": "array",
+          "description": "Appointment attendees",
+          "items": {
+            "$ref": "#/definitions/SyncEventDataAttendee"
+          }
+        }
+      },
+      "description": "Bean for carry event's updateable fields"
+    },
+    "SyncEventDataAttendee": {
+      "type": "object",
+      "required": [
+        "address",
+        "role",
+        "status",
+        "type"
+      ],
+      "properties": {
+        "address": {
+          "type": "string",
+          "description": "Address (as RFC822)"
+        },
+        "type": {
+          "type": "string",
+          "description": "Type"
+        },
+        "role": {
+          "type": "string",
+          "description": "Role"
+        },
+        "status": {
+          "type": "string",
+          "description": "Response status"
+        }
+      },
+      "description": "Bean for carry attendee's fields"
     }
   }
 }
